[package]
edition = "2024"
name = "dial"
authors = ["Owlive"]
rust-version = "1.88"
version = "1.0.0"

[[bin]]
name = "dial"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.9.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
  "defmt",
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

rust-mqtt = { version = "0.5.1", default-features = false, features = ["v5", "bump", "defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
heapless = { version = "0.9.3", features = ["defmt"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
usbd-hid = "0.10.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
